Kubernetes/GKE/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: crud-service
              port:
                number: 80
      - path: /my-app/crud
        pathType: Prefix
        backend:
          service:
              name: crud-service
              port:
                number: 80
      - path: /my-app/crud*
        pathType: Prefix
        backend:
          service:
              name: crud-service
              port:
                number: 80
